--- a/StateByState/ThirdThreePage.xaml
+++ b/StateByState/ThirdThreePage.xaml
@@ -1,17 +1,15 @@
 ﻿<lifecycle:BasePage
-    x:Class="StateByState.MainPage"
+    x:Class="StateByState.ThirdThreePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:StateByState"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:uwp="using:BuiltToRoam.Lifecycle.UWP"
     xmlns:lifecycle="using:BuiltToRoam.Lifecycle"
     mc:Ignorable="d">
 
-    <StackPanel VerticalAlignment="Center" Background ="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-<TextBlock Text="{Binding Data}"></TextBlock>
-        <Button Click="TestClick">Test</Button>
-        <Button Click="ThreeClick">Page Thre</Button>
-    </StackPanel>
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <TextBlock Text="{Binding Title}"
+                   FontSize="50"></TextBlock>
+    </Grid>
 </lifecycle:BasePage>
