--- a/StateByState.Shared/SecondPage.xaml
+++ b/StateByState.Shared/SecondPage.xaml
@@ -77,14 +77,14 @@
                    Text="Test 1 2 3 4"
                    FontSize="30"
                    Foreground="Blue" />
-        <Button Click="ToFirstClick">To First</Button>
-        <Button Click="ToSecondClick">To Second</Button>
-        <Button Click="ToThirdClick">To Third</Button>
-        <Button Click="DoneClick">Done</Button>
-        <Button Click="XtoZ">X To Z</Button>
-        <Button Click="YtoZ">Y To Z</Button>
-        <Button Click="ZtoY">Z To Y</Button>
-        <Button Click="YtoX">Y To X</Button>
+        <Button Click="{x:Bind CurrentViewModel.ToFirst}">To First</Button>
+        <Button Click="{x:Bind CurrentViewModel.ToSecond}">To Second</Button>
+        <Button Click="{x:Bind CurrentViewModel.ToThird}">To Third</Button>
+        <Button Click="{x:Bind CurrentViewModel.Done}">Done</Button>
+        <Button Click="{x:Bind CurrentViewModel.XtoZ}">X To Z</Button>
+        <Button Click="{x:Bind CurrentViewModel.YtoZ}">Y To Z</Button>
+        <Button Click="{x:Bind CurrentViewModel.ZtoY}">Z To Y</Button>
+        <Button Click="{x:Bind CurrentViewModel.YtoX}">Y To X</Button>
     </StackPanel>
 
 </lifecycle:BasePage>
