--- a/StateByState.Shared/ThirdFourPage.xaml
+++ b/StateByState.Shared/ThirdFourPage.xaml
@@ -1,16 +1,16 @@
-﻿<lifecycle:BasePage
-    x:Class="StateByState.ThirdFourPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:StateByState"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:lifecycle="using:BuiltToRoam.Lifecycle"
-    mc:Ignorable="d">
+﻿<lifecycle:BasePage x:Class="StateByState.ThirdFourPage"
+                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:local="using:StateByState"
+                    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                    xmlns:lifecycle="using:BuiltToRoam.Lifecycle"
+                    mc:Ignorable="d">
 
     <StackPanel Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-<TextBlock Text="{Binding Title}" FontSize="50"></TextBlock>
+        <TextBlock Text="{Binding Title}"
+                   FontSize="50"></TextBlock>
         <Button Content="Complete"
-                Click="CompleteInternalPageClick"></Button>
+                Click="{x:Bind CurrentViewModel.SayImDone}"></Button>
     </StackPanel>
 </lifecycle:BasePage>
