--- a/StateByState.Shared/MainPage.xaml
+++ b/StateByState.Shared/MainPage.xaml
@@ -13,5 +13,7 @@
 <TextBlock Text="{Binding Data}"></TextBlock>
         <Button Click="{x:Bind CurrentViewModel.Test}">Test</Button>
         <Button Click="{x:Bind CurrentViewModel.Three}">Page Thre</Button>
+        <Button Click="{x:Bind CurrentViewModel.Spawn}">Another Window</Button>
+
     </StackPanel>
 </lifecycle:BasePage>
